--- a/css/main.css
+++ b/css/main.css
@@ -29,15 +29,13 @@ body {
 
 nav {
 	background-color: #000;
-	margin-left: auto;
-	margin-right: auto;
+	margin; 0;
 	height: 40px;
 	text-align: center;
 }
 
 ul.nav {
-	margin-left: auto;
-	margin-right: auto;
+	margin: 0;
 	text-align: center;
 	word-spacing: 67px;
 }
